{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 12,
  "lineage": "0e4321b7-762c-6518-2d18-28528f487590",
  "resources": [
    {
      "module": "module.internat_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inter_gateway",
      "provider": "provider.aws"
    },
    {
      "module": "module.pub_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terra_alb",
      "provider": "provider.aws"
    },
    {
      "module": "module.listner",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listing",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.targetgroup",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terra_target_group",
      "provider": "provider.aws"
    },
    {
      "module": "module.pub_routetable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.pub3_association_to_routetable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider.aws"
    },
    {
      "module": "module.pub1_association_to_routetable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider.aws"
    },
    {
      "module": "module.pub4_association_to_routetable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider.aws"
    },
    {
      "module": "module.pub2_association_to_routetable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider.aws"
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_sg",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.pubb_subnet3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws"
    },
    {
      "module": "module.puba_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws"
    },
    {
      "module": "module.puba_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws"
    },
    {
      "module": "module.pubb_subnet4",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws"
    }
  ]
}